<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="geocaching.app.activities.CacheFoundActivity"
    android:gravity="center">

    <ImageView
        android:id="@+id/cacheFoundImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_thumb_up_black_48"
        android:padding="@dimen/big_padding"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treasure_found_text" />

    <TextView
        android:id="@+id/timerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_text_view"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/scoreView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_text"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/info_text_size"
        android:text="@string/ok_button_text" />
</LinearLayout>