<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/switch2"
        android:text="@string/setting1_text"/>

    <Switch
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/switch1"
        app:layout_constraintBottom_toTopOf="@id/switch3"
        android:text="@string/setting2_text"/>

    <Switch
        android:id="@+id/switch3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/switch2"
        app:layout_constraintBottom_toTopOf="@id/resetDefaultsButton"
        android:text="@string/setting3_text"/>

    <Button
        android:id="@+id/resetDefaultsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toTopOf="@id/resetProgressButton"
        app:layout_constraintTop_toBottomOf="@id/switch3"
        android:text="@string/reset_defaults_button_text"/>

    <Button
        android:id="@+id/resetProgressButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/resetDefaultsButton"
        android:text="@string/reset_progress_button_text"/>
</android.support.constraint.ConstraintLayout>